--- a/unicorn/themes/dimension/layouts/_default/list.html
+++ b/unicorn/themes/dimension/layouts/_default/list.html
@@ -8,7 +8,7 @@
             <!-- Header -->
                 <header id="header">
                     <div class="logo">
-                        <a href="/">
+                        <a href="https://wallaceandwang.com/portfolio/unicorn/">
                             <span class="icon">
                                 <img src="{{ .Params.logo }}">
                             </span>
