--- a/unicorn/themes/dimension/layouts/_default/single.html
+++ b/unicorn/themes/dimension/layouts/_default/single.html
@@ -12,7 +12,7 @@
                     </div>
                     <div class="content">
                         <div class="inner">
-                            <h1><a href="{{ "/" | relURL }}">Go Home</a></h1>
+                            <h1><a href="{{ "https://wallaceandwang.com/portfolio/unicorn/" | relURL }}">Go Home</a></h1>
                             <p>
                                 Nothing to see here
                             </p>
