--- a/themes/dimension2/layouts/_default/list.html
+++ b/themes/dimension2/layouts/_default/list.html
@@ -8,7 +8,7 @@
             <!-- Header -->
                 <header id="header">
                     <div class="logo">
-                        <a href=".index.html">
+                        <a href="../index.html">
                             <span class="icon">
                                 <img src="{{ .Params.logo }}">
                             </span>
