--- a/themes/dimension2/layouts/_default/single.html
+++ b/themes/dimension2/layouts/_default/single.html
@@ -12,7 +12,7 @@
                     </div>
                     <div class="content">
                         <div class="inner">
-                            <h1><a href="{{ "./index.html" | relURL }}">Go Home</a></h1>
+                            <h1><a href="{{ "../index.html" | relURL }}">Go Home</a></h1>
                             <p>
                                 Nothing to see here
                             </p>
