correcting footer links

--- a/themes/dimension2/layouts/partials/design.html
+++ b/themes/dimension2/layouts/partials/design.html
@@ -1,4 +1,4 @@
 <!-- Design -->
 <footer id="footer">
-    <p> Website built by <a href="https://wallaceandwang.com"> Wallace & Wang Ltd</a> // Content is &copy; protected by <a href="./index.html"> Unicorn Services Ltd</a>.</p>
+    <p> Website built by <a href="https://wallaceandwang.com"> Wallace & Wang Ltd</a> // Content is &copy; protected by <a href="https://funny-dusk-7f7c02.netlify.app"> Unicorn Services Ltd</a>.</p>
 </footer>
