--- a/themes/dimension2/layouts/partials/header.html
+++ b/themes/dimension2/layouts/partials/header.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>{{ .Params.Title | default "Title" }}</title>
-    <link rel="icon" href="https://funny-dusk-7f7c02.netlify.app/favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="{{ "assets/css/main.css" | absURL }}"/>
